[package]
name = "uci"
version = "0.1.2"
authors = ["CrazyMerlyn <crazy.d.merlyn@gmail.com>"]
description = "A library to programmatically communicate with UCI compatible chess engines"

homepage = "https://github.com/crazymerlyn/uci-rs"
repository = "https://github.com/crazymerlyn/uci-rs"
documentation = "https://docs.rs/uci"

readme = "README.md"
license = "MIT"
categories = ["game-engines"]
keywords = ["chess", "engine", "uci"]

[dependencies]
log = "0.3.6"

